--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,6 +1,10 @@
 <h2>Edit Historical Landmark</h2>
 
-<!-- add content here -->
-
-<a class="button" href="/landmarks">Landmarks</a>
-<a class="button" href="/">Home</a>
+<form method="post" action="/landmarks/<%=@landmark.id%>">
+<input type="hidden" name="_method" value="PATCH">
+<label for="name">Name:</label>
+<input type="text" name="landmark[name]" value="<%=@landmark.name%>" id="name">
+<label for="year_completed">Year Completed:</label>
+<input type="text" name="landmark[year_completed]" value="<%=@landmark.year_completed%>" id="year_completed">
+<input type="submit" value="Edit Landmark">
+</form>
